--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.payminder">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:name=".PayMinderApp"
         android:allowBackup="false"
