--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,11 @@ dependencies {
     //Java mail and JXL Libraries
     implementation fileTree(dir: 'libs' , include: '*.jar')
 
+    //Apache POI for reading XLSX Format
+    // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
+    implementation("org.apache.poi:poi-ooxml:3.9")
+    implementation("org.apache.poi:poi:3.9")
+
 
     //implementation 'com.google.guava:guava:27.0.1-android'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
