--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    compileSdk 31
+    compileSdkVersion 34
 
     defaultConfig {
         applicationId "com.example.payminder"
-        minSdk 23
-        targetSdk 31
+        minSdkVersion 23
+        targetSdkVersion 34
         versionCode 3
         versionName "1.1.1"
 
@@ -20,27 +20,37 @@ android {
         }
     }
 
+    android {
+        // ...
+        testOptions {
+            unitTests.returnDefaultValues = true
+        }
+    }
+
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
+    buildFeatures{
+        compose true
+    }
+
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = '1.8'
-        useIR = true
     }
-    buildFeatures {
-        compose true
-    }
+
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
-        kotlinCompilerVersion '1.5.21'
     }
+    namespace "com.example.payminder"
+
     packagingOptions {
         resources {
             resources.excludes.add("META-INF/DEPENDENCIES")
@@ -49,21 +59,25 @@ android {
     }
 }
 
-dependencies {
+kapt {
+    correctErrorTypes true
+}
 
+dependencies {
+    def compose_Version="1.2.1"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.0'
     implementation 'com.google.android.material:material:1.4.0'
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation "androidx.compose.ui:ui:$compose_Version"
+    implementation "androidx.compose.material:material:$compose_Version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_Version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
     implementation 'androidx.activity:activity-compose:1.4.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_Version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_Version"
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.0-beta04'
 
 
@@ -81,7 +95,7 @@ dependencies {
     implementation 'com.google.api-client:google-api-client-android:1.20.0'
 
     //Room Library
-    def room_version = "2.3.0"
+    def room_version = "2.6.1"
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
     implementation "androidx.room:room-ktx:$room_version"
