--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,33 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+ext {
+    compose_version = '1.5.15'
+}
+
 buildscript {
-    ext {
-        compose_version = '1.0.5'
-    }
+    ext.kotlin_version = "1.9.25"
+
     repositories {
         google()
         mavenCentral()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.4'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.31"
 
+    dependencies {
+        classpath 'com.android.tools.build:gradle:8.8.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
+}
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
