--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,9 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
-    id 'kotlin-kapt'
+    alias(libs.plugins.android.application)
+    alias(libs.plugins.kotlin.android)
+    alias(libs.plugins.google.ksp)
+    alias(libs.plugins.kotlin.serialization.plugin)
+    alias(libs.plugins.compose.compiler)
 }
 
 android {
@@ -39,16 +41,13 @@ android {
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '11'
     }
 
-    composeOptions {
-        kotlinCompilerExtensionVersion compose_version
-    }
     namespace "com.example.payminder"
 
     packagingOptions {
@@ -59,59 +58,55 @@ android {
     }
 }
 
-kapt {
-    correctErrorTypes true
-}
-
 dependencies {
-    def compose_Version="1.2.1"
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation "androidx.compose.ui:ui:$compose_Version"
-    implementation "androidx.compose.material:material:$compose_Version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_Version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.0'
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_Version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_Version"
-    implementation 'androidx.compose.runtime:runtime-livedata:1.1.0-beta04'
+    implementation libs.androidx.core.ktx
 
+    //Compose
+    implementation libs.material
+    implementation libs.androidx.ui
+    implementation libs.androidx.material
+    implementation libs.androidx.ui.tooling.preview
+    implementation libs.androidx.lifecycle.runtime.ktx
+    implementation libs.androidx.activity.compose
+    implementation libs.androidx.runtime.livedata
+
+    testImplementation libs.junit
+    androidTestImplementation libs.androidx.junit
+    androidTestImplementation libs.androidx.espresso.core
+    androidTestImplementation libs.androidx.ui.test.junit4
+    debugImplementation libs.androidx.ui.tooling
 
     //Navigation In Compose
-    implementation "androidx.navigation:navigation-compose:2.4.0-beta02"
+    implementation libs.androidx.navigation.compose
+    implementation libs.kotlinx.serialization
 
     //Work Manager (used for sending mail and sms)
-    def work_version="2.7.1"
-    implementation "androidx.work:work-runtime-ktx:$work_version"
+    implementation libs.androidx.work.runtime.ktx
 
 
     //Gmail access
-    implementation 'com.google.android.gms:play-services-auth:19.2.0'
-    implementation 'com.google.apis:google-api-services-gmail:v1-rev96-1.25.0'
-    implementation 'com.google.api-client:google-api-client-android:1.20.0'
+    implementation libs.play.services.auth
+    implementation libs.google.api.services.gmail
+    implementation libs.google.api.client.android
 
     //Room Library
     def room_version = "2.6.1"
-    implementation "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
-    implementation "androidx.room:room-ktx:$room_version"
+    implementation libs.androidx.room.runtime
+    ksp "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+    implementation libs.androidx.room.ktx
 
     //Leak canary for leak detection
-    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
+    debugImplementation libs.leakcanary.android
 
     //Java mail and JXL Libraries
     implementation fileTree(dir: 'libs' , include: '*.jar')
 
     //Apache POI for reading XLSX Format
     // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
-    implementation("org.apache.poi:poi-ooxml:3.9")
-    implementation("org.apache.poi:poi:3.9")
+    implementation(libs.poi.ooxml)
+    implementation(libs.poi)
 
 
     //implementation 'com.google.guava:guava:27.0.1-android'
-    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava'
+    implementation libs.listenablefuture
 }
