--- a/build.gradle
+++ b/build.gradle
@@ -1,24 +1,13 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
 
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-ext {
-    compose_version = '1.5.15'
-}
 
-buildscript {
-    ext.kotlin_version = "1.9.25"
-
-    repositories {
-        google()
-        mavenCentral()
-    }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.8.2'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
+plugins {
+   alias(libs.plugins.android.application) apply false
+    alias(libs.plugins.kotlin.android) apply false
+    alias(libs.plugins.google.ksp) apply false
+    alias(libs.plugins.kotlin.serialization.plugin) apply false
+    alias(libs.plugins.compose.compiler) apply false
 }
 
 allprojects {
@@ -26,9 +15,4 @@ allprojects {
         google()
         mavenCentral()
     }
-}
-
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
 }
