--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 34
+    namespace "com.example.payminder"
+    compileSdk 35
 
     defaultConfig {
         applicationId "com.example.payminder"
-        minSdkVersion 23
-        targetSdkVersion 34
+        minSdk 24
+        targetSdk 35
         versionCode 3
         versionName "1.1.1"
 
@@ -44,11 +45,10 @@ android {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
     }
+
     kotlinOptions {
         jvmTarget = '11'
     }
-
-    namespace "com.example.payminder"
 
     packagingOptions {
         resources {
@@ -65,6 +65,7 @@ dependencies {
     implementation libs.material
     implementation libs.androidx.ui
     implementation libs.androidx.material
+    implementation libs.material.icons
     implementation libs.androidx.ui.tooling.preview
     implementation libs.androidx.lifecycle.runtime.ktx
     implementation libs.androidx.activity.compose
@@ -90,9 +91,8 @@ dependencies {
     implementation libs.google.api.client.android
 
     //Room Library
-    def room_version = "2.6.1"
     implementation libs.androidx.room.runtime
-    ksp "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
+    ksp libs.androidx.room.compiler
     implementation libs.androidx.room.ktx
 
     //Leak canary for leak detection
